# platform.core.convergence.service-adaptor

./: .gitignore  CMakeLists.txt  LICENSE.APLv2  NOTICE  project.config  service-adaptor.manifest  service-adaptor.pc.in
adaptor/: CMakeLists.txt
adaptor/auth-adaptor/: auth-adaptor-log.h  auth-adaptor.c  auth-adaptor.h  auth_adaptor.c  auth_adaptor.h  oauth1_service.c  oauth1_service.h  oauth2_service.c  oauth2_service.h
adaptor/contact-adaptor/: contact-adaptor-log.h  contact-adaptor.c  contact-adaptor.h  contact_adaptor.c  contact_adaptor.h
adaptor/message-adaptor/: message-adaptor-log.h  message-adaptor.c  message-adaptor.h
adaptor/push-adaptor/: push-adaptor-log.h  push-adaptor.c  push-adaptor.h
adaptor/resource-adaptor/: resource_adaptor.c  resource_adaptor.h
adaptor/shop-adaptor/: shop-adaptor-log.h  shop-adaptor.c  shop-adaptor.h
adaptor/storage-adaptor/: cloud_service.c  cloud_service.h  posix_service.h  storage-adaptor-log.h  storage-adaptor.c  storage-adaptor.h  storage_adaptor.c  storage_adaptor.h
api/: CMakeLists.txt
api/client/: sal_client_internal.c  sal_client_internal.h  sal_client_types.h  sal_service_adaptor.c  sal_service_adaptor.h  sal_service_auth.c  sal_service_auth.h  sal_service_auth_internal.h  sal_service_storage.c  sal_service_storage.h  sal_service_storage_internal.h  sal_service_task.c  sal_service_task.h  sal_service_task_internal.h
api/client/include/: service_adaptor_client_log.h  service_adaptor_client_private.h  service_adaptor_client_storage_internal.h  service_adaptor_client_type.h
api/client/include/dbus/: dbus_client.h  dbus_client_auth.h  dbus_client_contact.h  dbus_client_layer.h  dbus_client_message.h  dbus_client_push.h  dbus_client_shop.h  dbus_client_storage.h
api/client/include/private/: service-adaptor-client-auth.h  service-adaptor-client-contact.h  service-adaptor-client-message.h  service-adaptor-client-push.h  service-adaptor-client-shop.h  service-adaptor-client-storage.h  service-adaptor-client.h
api/client/include/util/: service_adaptor_client_util.h
api/client/src/: service_adaptor_client.c  service_adaptor_client_auth.c  service_adaptor_client_contact.c  service_adaptor_client_message.c  service_adaptor_client_push.c  service_adaptor_client_shop.c  service_adaptor_client_storage.c
api/client/src/dbus/: dbus_client.c  dbus_client_auth.c  dbus_client_contact.c  dbus_client_layer.c  dbus_client_message.c  dbus_client_push.c  dbus_client_shop.c  dbus_client_storage.c
api/client/src/util/: service_adaptor_client_util.c
api/provider/: sal_auth_provider.c  sal_auth_provider.h  sal_provider_base.c  sal_provider_base.h  sal_provider_internal.h  sal_provider_service.c  sal_provider_service.h  sal_provider_storage.c  sal_provider_storage.h  sal_service_provider.c  sal_storage_provider.c
client/: CMakeLists.txt  sal_auth_provider.c  sal_service_adaptor.c  sal_service_adaptor.h  sal_service_adaptor_internal.h  sal_service_auth.c  sal_service_auth.h  sal_service_auth_internal.h  sal_service_provider.c  sal_service_provider.h  sal_service_storage.c  sal_service_storage.h  sal_service_storage_internal.h  sal_service_task.c  sal_service_task.h  sal_service_task_internal.h  sal_storage_provider.c  sal_storage_provider.h
common/: CMakeLists.txt  sal_ipc.c  sal_ipc.h
common/base/: sal_ipc.c  sal_ipc.h  sal_log.h  sal_types.h
common/ipc/: sal_ipc.c  sal_ipc.h
common/ipc-adaptor/: sal_ipc_adaptor.c  sal_ipc_adaptor.h  sal_ipc_adaptor_types.h  sal_ipc_client_auth.c  sal_ipc_client_auth.h  sal_ipc_client_core.c  sal_ipc_client_core.h
common/ipc-client/: sal_ipc_client.c  sal_ipc_client.h  sal_ipc_client_auth.c  sal_ipc_client_auth.h  sal_ipc_client_core.c  sal_ipc_client_core.h  sal_ipc_client_storage.c  sal_ipc_client_storage.h
common/ipc-provider/: sal_ipc_provider.c  sal_ipc_provider.h  sal_ipc_provider_base.c  sal_ipc_provider_base.h  sal_ipc_provider_storage.c  sal_ipc_provider_storage.h  sal_ipc_provider_types.h  sal_ipc_server.h  sal_ipc_server_auth.c  sal_ipc_server_auth.h  sal_ipc_server_core.c  sal_ipc_server_core.h
common/ipc-server/: sal_ipc_server.c  sal_ipc_server.h  sal_ipc_server_auth.c  sal_ipc_server_auth.h  sal_ipc_server_core.c  sal_ipc_server_core.h  sal_ipc_server_storage.c  sal_ipc_server_storage.h  sal_ipc_server_types.h
common/plugin_config/: libservice_plugin_log.h  pluginConfig.c  pluginConfig.h  pluginConfigLog.h  pluginConfigTypes.h  plugin_message.c  plugin_message.h  trimming.c
doc/: service_adaptor_doc.h  service_adaptor_plugin_doc.h  service_adaptor_storage_doc.h
include/: service_adaptor.h  service_adaptor_client.h  service_adaptor_client_plugin.h  service_adaptor_client_storage.h  service_adaptor_client_type.h  (+7 more)
server/: CMakeLists.txt  CMakeLists.txt.backup  sal.h  sal_auth.c  sal_auth.h  sal_base.c  sal_base.h  sal_contact.c  sal_contact.h  sal_engine.c  sal_engine.h  sal_main.c  sal_observer.c  sal_observer.h  sal_resource.c  sal_resource.h  sal_storage.c  sal_storage.h
server/inc/: service-adaptor-auth.h  service-adaptor-contact.h  service-adaptor-log.h  service-adaptor-message.h  service-adaptor-plugin.h  service-adaptor-push.h  service-adaptor-shop.h  service-adaptor-storage.h  service-adaptor-type.h  service-adaptor.h
server/inc/dbus/: dbus-auth-adaptor.h  dbus-contact-adaptor.h  dbus-ipc.h  dbus-message-adaptor.h  dbus-push-adaptor.h  dbus-server-type.h  dbus-server.h  dbus-service-adaptor.h  dbus-shop-adaptor.h  dbus-storage-adaptor.h  dbus-util.h
server/inc/util/: client_checker.h  ping_manager.h  service_file_manager.h
server/src/: service-adaptor-auth.c  service-adaptor-contact.c  service-adaptor-message.c  service-adaptor-plugin.c  service-adaptor-push.c  service-adaptor-shop.c  service-adaptor-storage.c  service-adaptor.c
server/src/dbus/: dbus-auth-adaptor.c  dbus-contact-adaptor.c  dbus-ipc.c  dbus-message-adaptor.c  dbus-push-adaptor.c  dbus-server.c  dbus-service-adaptor.c  dbus-shop-adaptor.c  dbus-storage-adaptor.c  dbus-util.c
server/src/util/: client_checker.c  ping_manager.c  service_file_manager.c
test/: CMakeLists.txt  test.c
(+6 files in other folders)
